--- a/package.json
+++ b/package.json
@@ -8,6 +8,11 @@
     "start": "next start"
   },
   "dependencies": {
+    "@emotion/core": "^10.0.22",
+    "@emotion/styled": "^10.0.23",
+    "babel-plugin-emotion": "^10.0.23",
+    "emotion": "^10.0.23",
+    "emotion-theming": "^10.0.19",
     "next": "9.1.2",
     "react": "16.11.0",
     "react-dom": "16.11.0"
