--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "emotion": "^10.0.23",
     "emotion-theming": "^10.0.19",
     "next": "9.1.2",
+    "next-fonts": "^0.19.0",
     "react": "16.11.0",
     "react-dom": "16.11.0"
   },
