--- a/package.json
+++ b/package.json
@@ -10,13 +10,17 @@
   "dependencies": {
     "@emotion/core": "^10.0.22",
     "@emotion/styled": "^10.0.23",
+    "@types/react-transition-group": "^4.2.3",
     "babel-plugin-emotion": "^10.0.23",
     "emotion": "^10.0.23",
     "emotion-theming": "^10.0.19",
     "next": "9.1.2",
     "next-fonts": "^0.19.0",
     "react": "16.11.0",
-    "react-dom": "16.11.0"
+    "react-dom": "16.11.0",
+    "react-icons": "^3.8.0",
+    "react-transition-group": "^4.3.0",
+    "react-use": "^13.9.0"
   },
   "devDependencies": {
     "@types/node": "^12.12.3",
